apps/bazarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`bazarr.${DOMAIN}`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: authentik
          namespace: traefik
